train on 1,2th and softmax layer, while frozen 3,4th

--- a/Transfer_Learning/HW3_Transfer_Learning.ipynb
+++ b/Transfer_Learning/HW3_Transfer_Learning.ipynb
@@ -735,7 +735,6 @@
     "    graph = tf.get_default_graph() # get original graph\n",
     "    X = graph.get_tensor_by_name(\"Input_X:0\") # assign placeholder variables with input X\n",
     "    y = graph.get_tensor_by_name(\"Input_Label:0\")# assign placeholder variables with input Label\n",
-    "#     mode = graph.get_tensor_by_name(\"Mode:0\")# assign placeholder variables with input Mode\n",
     "    loss = graph.get_tensor_by_name(\"Loss:0\") # assign variables about loss\n",
     "    Y_proba = graph.get_tensor_by_name(\"Softmax_Layer/Softmax:0\") # assign variables about loss\n",
     "    accuracy = graph.get_tensor_by_name(\"Accuracy:0\") # assign variables  about accuracy\n",
@@ -1045,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -1133,7 +1132,7 @@
       "  76 epochs,   Validation loss:1.13692,   Best loss:1.13692,   Accuracy:78.00%/ 74.10%\n",
       "  77 epochs,   Validation loss:1.13646,   Best loss:1.13646,   Accuracy:78.00%/ 74.20%\n",
       "\n",
-      "Training Time:0.391235\n"
+      "Training Time:0.392048\n"
      ]
     }
    ],
@@ -1246,24 +1245,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.4 Only Frozen 3th & 4th Layers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<tf.Variable 'New_Softmax_Layer/kernel:0' shape=(128, 5) dtype=float32_ref>,\n",
-       " <tf.Variable 'New_Softmax_Layer/bias:0' shape=(5,) dtype=float32_ref>]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./Models/yen/mnist_5.ckpt\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Input graph and Layer graph are not the same: Tensor(\"Fully_Connected_Layer_4/Elu:0\", shape=(?, 128), dtype=float32) is not from the passed-in graph.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m~/Documents/chatbot/lib/python3.5/site-packages/tensorflow/python/layers/base.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    427\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 428\u001b[0;31m       \u001b[0mops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_graph_from_inputs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    429\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/chatbot/lib/python3.5/site-packages/tensorflow/python/framework/ops.py\u001b[0m in \u001b[0;36m_get_graph_from_inputs\u001b[0;34m(op_input_list, graph)\u001b[0m\n\u001b[1;32m   4264\u001b[0m         raise ValueError(\n\u001b[0;32m-> 4265\u001b[0;31m             \"%s is not from the passed-in graph.\" % graph_element)\n\u001b[0m\u001b[1;32m   4266\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Tensor(\"Fully_Connected_Layer_4/Elu:0\", shape=(?, 128), dtype=float32) is not from the passed-in graph.",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-4acbcff4ac72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m                              \u001b[0mactivation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msoftmax\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m#softmax\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                              \u001b[0mkernel_initializer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvariance_scaling_initializer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m                              \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"New_Softmax_Layer\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m                             )  # Layer using dense\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/chatbot/lib/python3.5/site-packages/tensorflow/python/layers/core.py\u001b[0m in \u001b[0;36mdense\u001b[0;34m(inputs, units, activation, use_bias, kernel_initializer, bias_initializer, kernel_regularizer, bias_regularizer, activity_regularizer, trainable, name, reuse)\u001b[0m\n\u001b[1;32m    213\u001b[0m                 \u001b[0m_scope\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m                 _reuse=reuse)\n\u001b[0;32m--> 215\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mlayer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    216\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    217\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/chatbot/lib/python3.5/site-packages/tensorflow/python/layers/base.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, inputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    501\u001b[0m       \u001b[0mOutput\u001b[0m \u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    502\u001b[0m     \"\"\"\n\u001b[0;32m--> 503\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    504\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    505\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_assert_input_compatibility\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/chatbot/lib/python3.5/site-packages/tensorflow/python/layers/base.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    428\u001b[0m       \u001b[0mops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_graph_from_inputs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    429\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 430\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Input graph and Layer graph are not the same: %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    431\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    432\u001b[0m     with vs.variable_scope(self._scope,\n",
+      "\u001b[0;31mValueError\u001b[0m: Input graph and Layer graph are not the same: Tensor(\"Fully_Connected_Layer_4/Elu:0\", shape=(?, 128), dtype=float32) is not from the passed-in graph."
+     ]
     }
    ],
    "source": [
-    "output_layer_vars"
+    "reset_graph()\n",
+    "\n",
+    "no_update_tolerant = 20\n",
+    "\n",
+    "no_update_progress = 0\n",
+    "current_best_accuracy = 0.0\n",
+    "current_best_loss = 10.0\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    restore_saver = tf.train.import_meta_graph(\"./Models/yen/mnist_5.ckpt.meta\") # load meta graph\n",
+    "    restore_saver.restore(sess, tf.train.latest_checkpoint('./Models/yen/')) # restore weights\n",
+    "#     sess.run(tf.global_variables_initializer()) # initialize the weights \n",
+    "#     sess.run(tf.local_variables_initializer()) # initialize the local variables hidden in the tf.metrics.recallmethod.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Graph Define Step\n",
+    "    \n",
+    "    1. Restore the variable about the component in graph which help to retrieve and assign value\n",
+    "    \"\"\"\n",
+    "    graph = tf.get_default_graph() # get original graph\n",
+    "    X = graph.get_tensor_by_name(\"Input_X:0\") # assign placeholder variables with input X\n",
+    "    y = graph.get_tensor_by_name(\"Input_Label:0\")# assign placeholder variables with input Label\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    2.Create new softmax layer and connect old fourth layer, connect to softmax layer\n",
+    "    \"\"\"\n",
+    "    y_ = tf.layers.dense(inputs=fourth_layer_out, \n",
+    "                             units=5, \n",
+    "                             activation=tf.nn.softmax, #softmax\n",
+    "                             kernel_initializer=tf.contrib.layers.variance_scaling_initializer(),\n",
+    "                             name = \"New_Softmax_Layer\"\n",
+    "                            )  # Layer using dense\n",
+    "\n",
+    "    \"\"\"\n",
+    "    3. Get the 1th, 2th and softmax layer which is what we would like to train\n",
+    "    \"\"\"\n",
+    "    output_layer_vars = tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"Fully_Connected_Layer_1\") # get softmax layer by scope name\n",
+    "    output_layer_vars += tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"Fully_Connected_Layer_2\") # get softmax layer by scope name\n",
+    "    output_layer_vars += tf.get_collection(tf.GraphKeys.TRAINABLE_VARIABLES, scope=\"New_Softmax_Layer\") # get softmax layer by scope name\n",
+    "\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    4. Define loss, optimizer and assign to only update on softmax_layer which defined above\n",
+    "    \"\"\"   \n",
+    "    \n",
+    "    loss = tf.reduce_mean(tf.nn.sparse_softmax_cross_entropy_with_logits(labels=y, logits=y_, name=\"New_Cross_Entropy\"), name=\"New_Loss\") # Refine Loss Function\n",
+    "\n",
+    "    optimizer = tf.train.AdamOptimizer(0.0017, name=\"Adam_Op\")\n",
+    "    training_op = optimizer.minimize(loss) # minimize the loss and only update certern variables\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    5. Define new evaluation metrics\n",
+    "    \"\"\"\n",
+    "    # Define Accuracy\n",
+    "    predicted_class = tf.argmax(y_, 1, output_type=tf.int32)\n",
+    "    correct_predict = tf.equal(y, predicted_class) # [True, False ..., True]\n",
+    "    accuracy = tf.reduce_mean(tf.cast(correct_predict, tf.float32)) # [True, False ..., True] --> [1,0,...,1]\n",
+    "\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    6. Initialize all the variables\n",
+    "    \"\"\"\n",
+    "    var_list_init = tf.variables_initializer(set(tf.global_variables())-temp)\n",
+    "    sess.run(var_list_init) # init the variable about fourth + softmax layer + adam optimizer\n",
+    "   \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Training Step\n",
+    "    \"\"\"\n",
+    "    begin_time = time.time()\n",
+    "    for epochs in range(1000): # training on 1000 epochs\n",
+    "        _, train_loss = sess.run([training_op, loss], feed_dict={X:X_train2, y:y_train2}) # feed with training variables\n",
+    "        valid_loss, valid_accuracy = sess.run([loss, accuracy], feed_dict={X:X_valid2, y:y_valid2}) # feed with validation variables\n",
+    "        test_loss ,  test_accuracy = sess.run([loss, accuracy], feed_dict={X:X_test2, y:y_test2}) # feed with testing variables\n",
+    "        \n",
+    "        if valid_accuracy > current_best_accuracy: # if better\n",
+    "            current_best_accuracy = valid_accuracy # keep record\n",
+    "            no_update_progress = 0\n",
+    "        else:                                      # if not better\n",
+    "            no_update_progress += 1                # record on no update\n",
+    "\n",
+    "        if valid_loss < current_best_loss: # if better\n",
+    "            current_best_loss = valid_loss # keep record            \n",
+    "            \n",
+    "        if no_update_progress == no_update_tolerant: break # stop training\n",
+    "            \n",
+    "                \n",
+    "        print(\"{:4d} epochs,   Validation loss:{:.5f},   Best loss:{:.5f},   Accuracy:{:.2f}%/ {:.2f}%\".format(\n",
+    "            epochs+1,\n",
+    "            valid_loss,\n",
+    "            current_best_loss,                                                                                       \n",
+    "            valid_accuracy*100,\n",
+    "            test_accuracy*100\n",
+    "        ))\n",
+    "    finish_itme = time.time()\n",
+    "    print(\"\\nTraining Time:{:3f}\".format(finish_itme-begin_time))\n",
+    "        \n",
+    "        "
    ]
   },
   {
